--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="section2btm" style="overflow: hidden;">
                         이미지 크기조절후 히든x, 반응형하려면 사진 하나씩 잘라서!
-                        <img src="./img/c2_ful.png">
+                        <img src="./img/c2_ful.PNG">
                         
                     </div>
                 </div>
